--- a/scripts/Metallicity Profiles.ipynb
+++ b/scripts/Metallicity Profiles.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,12 +255,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "sample = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
     "df = read_sample_data(galaxies=sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"SampleAverage_<[Fe/H]>_dex\"] = df[\n",
+    "    [f\"{galaxy.upper()}_<[Fe/H]>_dex\" for galaxy in sample]].mean(axis=1)\n",
+    "df[\"SampleDispersion_<[Fe/H]>_dex\"] = df[\n",
+    "    [f\"{galaxy.upper()}_<[Fe/H]>_dex\" for galaxy in sample]].std(axis=1)"
    ]
   },
   {
@@ -282,10 +294,6 @@
     "    ax.plot(df[\"BinCenters_ckpc\"], df[f\"{galaxy.upper()}_<[Fe/H]>_dex\"],\n",
     "            lw=1, color=\"gainsboro\", zorder=10)\n",
     "\n",
-    "df[\"SampleAverage_<[Fe/H]>_dex\"] = df[\n",
-    "    [f\"{galaxy.upper()}_<[Fe/H]>_dex\" for galaxy in sample]].mean(axis=1)\n",
-    "df[\"SampleDispersion_<[Fe/H]>_dex\"] = df[\n",
-    "    [f\"{galaxy.upper()}_<[Fe/H]>_dex\" for galaxy in sample]].std(axis=1)\n",
     "ax.plot(df[\"BinCenters_ckpc\"], df[\"SampleAverage_<[Fe/H]>_dex\"],\n",
     "        lw=1, color='k', zorder=11)\n",
     "ax.plot(df[\"BinCenters_ckpc\"],\n",
@@ -493,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,81 +570,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.6"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_data[-1] - y_delta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(figsize=(6.0, 2.5), ncols=2,\n",
+    "y_delta = 0.02\n",
+    "\n",
+    "y_data = [0]\n",
+    "x_data = [sample_fit.slope]\n",
+    "x_data_err = [sample_fit.stderr]\n",
+    "y_label = [r\"\\textbf{Auriga}\"]\n",
+    "c = ['k']\n",
+    "\n",
+    "for i, fit in enumerate(range_fits):\n",
+    "    y_data.append(- y_delta * i)\n",
+    "    x_data.append(fit.slope)\n",
+    "    x_data_err.append(fit.stderr)\n",
+    "    y_label.append(f\"Au{i + 1}\")\n",
+    "    c.append(\"gainsboro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(figsize=(7.2, 4.0), ncols=2,\n",
     "                       gridspec_kw={\"wspace\": 0.3})\n",
     "\n",
     "axs[0].set_xlim(-0.1, 0.02)\n",
-    "axs[0].set_ylim(-0.35, 0.05)\n",
+    "axs[0].set_ylim(-0.7, 0.02)\n",
     "axs[0].set_xlabel(r\"Slope [dex/kpc]\")\n",
-    "axs[0].set_yticks([])\n",
+    "axs[0].set_yticks([- i * 0.02 for i in range(35)])\n",
+    "axs[0].set_yticklabels([])\n",
     "\n",
     "axs[1].set_xlim(0, 30)\n",
     "axs[1].set_ylim(-0.6, 0.6)\n",
     "axs[1].set_xlabel(r\"$r_{xy}$ [ckpc]\")\n",
     "axs[1].set_ylabel(r\"$\\left< \\mathrm{[Fe/H]} \\right>$\")\n",
     "\n",
-    "for ax in axs:\n",
-    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
-    "\n",
-    "for i, fit in enumerate(range_fits):\n",
-    "    axs[0].errorbar(\n",
-    "        fit.slope, 0 - 0.01 * i,\n",
-    "        xerr=fit.stderr, color=\"gainsboro\",\n",
-    "        markeredgecolor=\"white\", capsize=2, capthick=1,\n",
-    "        marker='o', markersize=4, linestyle='none', zorder=10)\n",
+    "for ax in axs: ax.grid(True, ls='-', lw=0.25, c='gainsboro')\n",
     "\n",
     "axs[0].errorbar(\n",
-    "    sample_fit.slope, -0.15, xerr=sample_fit.stderr,\n",
+    "    sample_fit.slope, 0, xerr=sample_fit.stderr,\n",
     "    markeredgecolor=\"white\", capsize=2, capthick=1, color='k',\n",
     "    marker='o', markersize=4, linestyle='none', zorder=10)\n",
     "\n",
+    "for i, fit in enumerate(range_fits):\n",
+    "    axs[0].errorbar(\n",
+    "        fit.slope, 0 - 0.02 * (i + 1),\n",
+    "        xerr=fit.stderr, color=\"gray\",\n",
+    "        markeredgecolor=\"white\", capsize=2, capthick=1,\n",
+    "        marker='o', markersize=4, linestyle='none', zorder=10)\n",
+    "    axs[0].text(\n",
+    "        x=-0.105, y=0 - 0.02 * (i + 1), size=6.0, color=\"gray\",\n",
+    "        ha=\"right\", va=\"center\", s=f\"Au{i + 1}\")\n",
+    "\n",
     "axs[0].errorbar(\n",
-    "    data1[\"Data\"][\"Slope\"], 0, xerr=data1[\"Data\"][\"SlopeErr\"],\n",
+    "    data1[\"Data\"][\"Slope\"], - 0.02 * 31, xerr=data1[\"Data\"][\"SlopeErr\"],\n",
     "    markeredgecolor=\"white\", capsize=2, capthick=1,\n",
     "    marker='o', markersize=4, linestyle='none', zorder=10)\n",
     "axs[0].errorbar(\n",
-    "    data2[\"Data\"][\"Slope\"], -0.15, xerr=data2[\"Data\"][\"SlopeErr\"],\n",
+    "    data2[\"Data\"][\"Slope\"], - 0.02 * 32, xerr=data2[\"Data\"][\"SlopeErr\"],\n",
     "    markeredgecolor=\"white\", capsize=2, capthick=1,\n",
     "    marker='o', markersize=4, linestyle='none', zorder=10)\n",
     "axs[0].errorbar(\n",
-    "    data3[\"Data\"][\"Slope\"], 0, xerr=data3[\"Data\"][\"SlopeErr\"],\n",
+    "    data3[\"Data\"][\"Slope\"], - 0.02 * 33, xerr=data3[\"Data\"][\"SlopeErr\"],\n",
     "    markeredgecolor=\"white\", capsize=2, capthick=1,\n",
     "    marker='o', markersize=4, linestyle='none', zorder=10)\n",
     "axs[0].errorbar(\n",
-    "    data4[\"Data\"][\"BootstrapSlope\"], -0.05,\n",
+    "    data4[\"Data\"][\"BootstrapSlope\"], - 0.02 * 34,\n",
     "    xerr=data4[\"Data\"][\"BootstrapSlopeErr\"],\n",
     "    markeredgecolor=\"white\", capsize=2, capthick=1,\n",
     "    marker='o', markersize=4, linestyle='none', zorder=10)\n",
     "\n",
-    "axs[0].text(\n",
-    "    x=0.05, y=0.30, size=6.0, color=\"tab:blue\", ha=\"left\", va=\"bottom\",\n",
-    "    s=\"Genovali et al. (2014)\", transform=axs[0].transAxes)\n",
-    "axs[0].text(\n",
-    "    x=0.05, y=0.25, size=6.0, color=\"tab:orange\", ha=\"left\", va=\"bottom\",\n",
-    "    s=\"Lemasle et al. (2007)\", transform=axs[0].transAxes)\n",
-    "axs[0].text(\n",
-    "    x=0.05, y=0.20, size=6.0, color=\"tab:green\", ha=\"left\", va=\"bottom\",\n",
-    "    s=\"Lemasle et al. (2008)\", transform=axs[0].transAxes)\n",
-    "axs[0].text(\n",
-    "    x=0.05, y=0.15, size=6.0, color=\"tab:red\", ha=\"left\", va=\"bottom\",\n",
-    "    s=\"Lemasle et al. (2018)\", transform=axs[0].transAxes)\n",
-    "axs[0].text(\n",
-    "    x=0.05, y=0.1, size=6.0, color=\"gainsboro\", ha=\"left\", va=\"bottom\",\n",
-    "    s=\"Auriga Sample\", transform=axs[0].transAxes)\n",
-    "axs[0].text(\n",
-    "    x=0.05, y=0.05, size=6.0, color='k', ha=\"left\", va=\"bottom\",\n",
-    "    s=\"Auriga Sample Average\", transform=axs[0].transAxes)\n",
+    "axs[0].text(x=-0.105, y=0, size=6.0, color='k',\n",
+    "            ha=\"right\", va=\"center\", s=\"Auriga Average\")\n",
     "\n",
-    "axs[0].plot([0] * 2, ax.get_ylim(), ls=\"--\", lw=0.75, color='k', zorder=10)\n",
+    "axs[0].text(x=-0.105, y=- 0.02 * 31, size=6.0, color=\"tab:blue\",\n",
+    "            ha=\"right\", va=\"center\", s=\"Genovali et al. (2014)\")\n",
+    "axs[0].text(x=-0.105, y=- 0.02 * 32, size=6.0, color=\"tab:orange\",\n",
+    "            ha=\"right\", va=\"center\", s=\"Lemasle et al. (2007)\")\n",
+    "axs[0].text(x=-0.105, y=- 0.02 * 33, size=6.0, color=\"tab:green\",\n",
+    "            ha=\"right\", va=\"center\", s=\"Lemasle et al. (2008)\")\n",
+    "axs[0].text(x=-0.105, y=- 0.02 * 34, size=6.0, color=\"tab:red\",\n",
+    "            ha=\"right\", va=\"center\", s=\"Lemasle et al. (2018)\")\n",
+    "\n",
+    "axs[0].plot([0] * 2, axs[0].get_ylim(), ls=\"--\", lw=0.75, color='k', zorder=10)\n",
     "\n",
     "axs[1].plot(axs[1].get_xlim(), [0] * 2, ls=\"--\", lw=0.75, color='k', zorder=10)\n",
     "x = np.linspace(0, 30, 100)\n",
     "for fit in range_fits:\n",
-    "    axs[1].plot(x, x * fit.slope, color=\"gainsboro\",lw=1, zorder=10)\n",
+    "    axs[1].plot(x, x * fit.slope, color=\"grey\",lw=1, zorder=10)\n",
     "axs[1].plot(x, x * sample_fit.slope, color='k', lw=1, zorder=11)\n",
     "axs[1].plot(x, x * data1[\"Data\"][\"Slope\"], lw=1, zorder=11)\n",
     "axs[1].plot(x, x * data2[\"Data\"][\"Slope\"], lw=1, zorder=11)\n",
