--- a/scripts/Particle Distribution.ipynb
+++ b/scripts/Particle Distribution.ipynb
@@ -178,7 +178,7 @@
     "    ax.set_xticks([10, 30, 50, 70, 90])\n",
     "    ax.set_yticks([1E3, 1E4, 1E5])\n",
     "    ax.set_xlabel(r\"$r_{xy}$ [ckpc]\")\n",
-    "    ax.set_ylabel(\"Count\")\n",
+    "    ax.set_ylabel(r\"$N$\")\n",
     "    ax.label_outer()\n",
     "\n",
     "for i, simulation in enumerate(simulations):\n",
