Add metallicity profile for SSPs of different ages.

--- a/scripts/Metallicity Profiles.ipynb
+++ b/scripts/Metallicity Profiles.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,6 +691,89 @@
     "\n",
     "fig.savefig(\n",
     "    f\"../images/metallicity_profiles/mw_comparison/slope_data_range.pdf\")\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## By SSP Age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age_ranges = [(2 * i, 2 * i + 2) for i in range(7)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:8: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  \n",
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:14: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  \n",
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:8: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  \n",
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:14: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "fig = plt.figure(figsize=(7.2, 7.2))\n",
+    "gs = fig.add_gridspec(nrows=6, ncols=5, hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "for i, galaxy in enumerate(settings.galaxies):\n",
+    "    simulation = f\"au{galaxy}_or_l4_s127\"\n",
+    "    ax = axs.flatten()[i]\n",
+    "\n",
+    "    # Set up current ax\n",
+    "    ax.grid(True, ls='-', lw=0.2, c=\"gainsboro\", zorder=-10)\n",
+    "    ax.set_xlim(RXY_RANGE)\n",
+    "    ax.set_xticks([0, 5, 10, 15, 20, 25])\n",
+    "    ax.set_ylim(-1, 1)\n",
+    "    ax.set_yticks([-0.9, -0.6, -0.3, 0, 0.3, 0.6, 0.9])\n",
+    "    ax.set_ylabel(\"[Fe/H]\")\n",
+    "    ax.set_xlabel(r\"$r_{xy}$ [ckpc]\")\n",
+    "    ax.tick_params(axis=\"both\", labelsize=8.0)\n",
+    "    ax.label_outer()\n",
+    "\n",
+    "    df = read_snapshot_data(simulation=simulation, of=\"Fe\", to=\"H\")\n",
+    "\n",
+    "    ax.text(x=0.95, y=0.95, size=6.0,\n",
+    "            s=r\"$\\texttt{\" + f\"au{galaxy}_or_l4\".upper() + \"}$\",\n",
+    "            ha='right', va='top', transform=ax.transAxes)\n",
+    "\n",
+    "    for age_range in age_ranges:\n",
+    "        is_age = (df[\"StellarAge_Gyr\"] >= age_range[0]) \\\n",
+    "            & (df[\"StellarAge_Gyr\"] < age_range[1])\n",
+    "        \n",
+    "        label = f\"{age_range[0]} - {age_range[1]}\"\n",
+    "        bin_centers, mean, _ = calc_mean_stat(\n",
+    "            x=df[\"CylindricalRadius_ckpc\"][is_age], y=df[\"[Fe/H]_dex\"][is_age],\n",
+    "            n_bins=N_BINS, xrange=RXY_RANGE)\n",
+    "\n",
+    "        ax.plot(bin_centers, mean, label=label, zorder=10)\n",
+    "\n",
+    "        fig.savefig(f\"../images/metallicity_profiles/by_ssp_age.pdf\")\n",
+    "\n",
+    "    if galaxy == 1:\n",
+    "        ax.legend(loc=(0.3, 0.5), framealpha=0.0, fontsize=3.0,\n",
+    "                  ncol=2, title=\"Age [Gyr]\", title_fontsize=4.0)\n",
+    "\n",
+    "fig.savefig(f\"../images/metallicity_profiles/by_ssp_age.pdf\")\n",
     "plt.close(fig)"
    ]
   },
