Update plot styles.

--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -10,13 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
-    "import numpy as np\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
     "from auriga.settings import Settings"
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,27 +68,24 @@
     "    tuple\n",
     "        The circularity and normalized potential.\n",
     "    \"\"\"\n",
+    "    settings = Settings()\n",
+    "\n",
     "    s = Snapshot(simulation=simulation,\n",
     "                 loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.add_circularity()\n",
     "    s.add_reference_to_potential()\n",
     "    s.add_normalized_potential()\n",
-    "    s.tag_particles_by_region(disc_std_circ=1.0,\n",
-    "                              disc_min_circ=0.4,\n",
-    "                              cold_disc_delta_circ=0.25,\n",
-    "                              bulge_max_specific_energy=-0.75)\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
     "\n",
     "    return (s.circularity[is_real_star & is_main_obj],\n",
-    "        s.normalized_potential[is_real_star & is_main_obj],\n",
-    "        s.region_tag[is_real_star & is_main_obj])"
+    "            s.normalized_potential[is_real_star & is_main_obj],)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +101,7 @@
     "        The ax to which to add the plot.\n",
     "    \"\"\"\n",
     "\n",
-    "    circularity, potential, _ = read_data(simulation=simulation)\n",
+    "    circularity, potential = read_data(simulation=simulation)\n",
     "    _, _, _, im = ax.hist2d(circularity,\n",
     "                            potential,\n",
     "                            cmap='nipy_spectral',\n",
@@ -113,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,20 +156,14 @@
     "        else:\n",
     "            ax.axis(\"off\")\n",
     "\n",
-    "    # cbar = fig.colorbar(im, ax=ax, orientation='vertical',\n",
-    "    #                     label=r'$N_\\mathrm{stars}$',\n",
-    "    #                     pad=0)\n",
-    "    # cbar.ax.set_yticks([1E0, 1E1, 1E2, 1E3])\n",
-    "\n",
-    "    for ext in [\"pdf\", \"png\"]:\n",
-    "        fig.savefig(\n",
-    "            f\"../images/galaxy_decomposition/phase_space_{filename}.{ext}\")\n",
+    "    fig.savefig(\n",
+    "        f\"../images/galaxy_decomposition/phase_space_{filename}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,10 +171,10 @@
     "settings = Settings()\n",
     "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
     "reruns = [f\"au{i}_re_l4_s251\" for i in settings.reruns]\n",
-    "plot_decomp_phases_for_sample(simulations=originals,\n",
-    "                              filename=\"originals_s127\")\n",
-    "plot_decomp_phases_for_sample(simulations=reruns,\n",
-    "                              filename=\"reruns_s251\")"
+    "plot_decomp_phases_for_sample(\n",
+    "    simulations=originals, filename=\"originals_s127\")\n",
+    "plot_decomp_phases_for_sample(\n",
+    "    simulations=reruns, filename=\"reruns_s251\")"
    ]
   }
  ],
