--- a/scripts/Metallicity Profiles.ipynb
+++ b/scripts/Metallicity Profiles.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility. Expected 80 from C header, got 88 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -744,8 +753,8 @@
     "    ax.set_xlim(RXY_RANGE)\n",
     "    ax.set_xticks([0, 5, 10, 15, 20, 25])\n",
     "    ax.set_ylim(-1, 1)\n",
-    "    ax.set_yticks([-0.9, -0.6, -0.3, 0, 0.3, 0.6, 0.9])\n",
-    "    ax.set_ylabel(\"[Fe/H]\")\n",
+    "    ax.set_yticks([-0.6, -0.3, 0, 0.3, 0.6])\n",
+    "    ax.set_ylabel(r\"$\\left< \\mathrm{[Fe/H]} \\right>$\")\n",
     "    ax.set_xlabel(r\"$r_{xy}$ [ckpc]\")\n",
     "    ax.tick_params(axis=\"both\", labelsize=8.0)\n",
     "    ax.label_outer()\n",
@@ -753,7 +762,7 @@
     "    df = read_snapshot_data(simulation=simulation, of=\"Fe\", to=\"H\")\n",
     "\n",
     "    ax.text(x=0.95, y=0.95, size=6.0,\n",
-    "            s=r\"$\\texttt{\" + f\"au{galaxy}_or_l4\".upper() + \"}$\",\n",
+    "            s=r\"$\\texttt{\" + f\"au{galaxy}_or_l4_s127\".upper() + \"}$\",\n",
     "            ha='right', va='top', transform=ax.transAxes)\n",
     "\n",
     "    for age_range in age_ranges:\n",
@@ -774,6 +783,75 @@
     "                  ncol=2, title=\"Age [Gyr]\", title_fontsize=4.0)\n",
     "\n",
     "fig.savefig(f\"../images/metallicity_profiles/by_ssp_age.pdf\")\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age_ranges = [(i, i + 1) for i in range(14)]\n",
+    "fit_data = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fits for different stellar ages\n",
+    "for galaxy in settings.galaxies:\n",
+    "    simulation = f\"au{galaxy}_or_l4_s127\"\n",
+    "    df = read_snapshot_data(simulation=simulation, of=\"Fe\", to=\"H\")\n",
+    "    for age_range in age_ranges:\n",
+    "        is_age = (df[\"StellarAge_Gyr\"] >= age_range[0]) \\\n",
+    "                 & (df[\"StellarAge_Gyr\"] < age_range[1])\n",
+    "        model = linregress(x=df[\"CylindricalRadius_ckpc\"][is_age],\n",
+    "                           y=df[\"[Fe/H]_dex\"][is_age])\n",
+    "        fit_data.append([galaxy, age_range, model])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
+    "\n",
+    "ax.set_xlim(0, 14)\n",
+    "ax.set_ylim(-0.07, 0)\n",
+    "ax.set_xlabel(\"Stellar Age [Gyr]\")\n",
+    "ax.set_ylabel(r\"Slope [dex/kpc]\")\n",
+    "ax.tick_params(axis=\"both\", labelsize=8.0)\n",
+    "\n",
+    "ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "\n",
+    "for i in range(len(fit_data)):\n",
+    "    c = \"silver\"\n",
+    "    zorder = 10\n",
+    "    if fit_data[i][0] == 6:\n",
+    "        c = \"tab:blue\"\n",
+    "        zorder = 11\n",
+    "    if fit_data[i][0] == 9:\n",
+    "        c = \"tab:red\"\n",
+    "        zorder = 11\n",
+    "    ax.plot(np.mean(fit_data[i][1]), fit_data[i][2].slope,\n",
+    "            markersize=3, marker='o', lw=0,\n",
+    "            markeredgewidth=0, markerfacecolor=c, color=c, zorder=zorder)\n",
+    "\n",
+    "ax.text(x=0.95, y=0.1, size=7.0, c=\"tab:blue\",\n",
+    "        s=r\"$\\texttt{\" + f\"au6_or_l4_s127\".upper() + \"}$\",\n",
+    "        ha=\"right\", va=\"bottom\", transform=ax.transAxes)\n",
+    "ax.text(x=0.95, y=0.04, size=7.0, c=\"tab:red\",\n",
+    "        s=r\"$\\texttt{\" + f\"au9_or_l4_s127\".upper() + \"}$\",\n",
+    "        ha=\"right\", va=\"bottom\", transform=ax.transAxes)\n",
+    "\n",
+    "\n",
+    "fig.savefig(f\"../images/metallicity_profiles/slope_vs_ssp_age.pdf\")\n",
     "plt.close(fig)"
    ]
   },
