--- a/scripts/FeH Metallicity.ipynb
+++ b/scripts/FeH Metallicity.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
     "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
     "\n",
     "for ax in axs.flat:\n",
-    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
     "    ax.set_xlim(-1.0, 0.6)\n",
     "    ax.set_ylim(0.2, 0.3)\n",
@@ -282,6 +282,7 @@
     "markers = [\"o\", \"v\", \"^\", \"d\"]\n",
     "colors = list(settings.component_colors.values())\n",
     "labels = list(settings.component_labels.values())\n",
+    "\n",
     "for i, ax in enumerate(axs.flat):\n",
     "    for j in range(4):\n",
     "        label = labels[j] if j == i else None\n",
