Add new figure.

--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,9 @@
     "import matplotlib.colors as mcolors\n",
     "import numpy as np\n",
     "from scipy.stats import binned_statistic\n",
-    "import pandas as pd"
+    "from scipy.stats import gaussian_kde\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,6 +364,9 @@
     "        ax.set_ylabel(\"[Fe/H]\")\n",
     "        ax.label_outer()\n",
     "\n",
+    "    print(\"MEDIAN DATA\")\n",
+    "    print(\"===========\")\n",
+    "\n",
     "    age, metal_ab, region_tag = read_data_with_region(simulation=simulation)\n",
     "    for idx, tag in enumerate(np.unique(region_tag)):\n",
     "        is_region = (region_tag == tag)\n",
@@ -381,6 +386,11 @@
     "                      size=8.0, transform=axs[idx].transAxes,\n",
     "                      ha='left', va='bottom',\n",
     "                      )\n",
+    "\n",
+    "        print(\"\")\n",
+    "        print(f\"{settings.component_labels[settings.components[idx]]}\")\n",
+    "        print(f\"[Fe/H]: {np.nanmedian(metal_ab[is_region])}\")\n",
+    "        print(f\"Age [Gyr]: {np.nanmedian(age[is_region])}\")\n",
     "\n",
     "        axs[idx].plot(axs[idx].get_xlim(),\n",
     "                      [np.nanmedian(metal_ab[is_region]),\n",
@@ -441,6 +451,99 @@
     "    plot_age_metal_rel_by_region_for_galaxy(f\"au{galaxy}_or_l4_s127\")\n",
     "    if galaxy in settings.reruns:\n",
     "        plot_age_metal_rel_by_region_for_galaxy(f\"au{galaxy}_re_l4_s251\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Median Scatter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "component = []\n",
+    "abundance_median = []\n",
+    "age_median = []\n",
+    "\n",
+    "for galaxy in tqdm(settings.galaxies):\n",
+    "    age, metal_ab, region_tag = read_data_with_region(f\"au{galaxy}_or_l4_s127\")\n",
+    "    for _, tag in settings.component_tags.items():\n",
+    "        is_region = region_tag == tag\n",
+    "        component.append(tag)\n",
+    "        abundance_median.append(np.nanmedian(metal_ab[is_region]))\n",
+    "        age_median.append(np.nanmedian(age[is_region]))\n",
+    "\n",
+    "component = np.array(component)\n",
+    "abundance_median = np.array(abundance_median)\n",
+    "age_median = np.array(age_median)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(\n",
+    "    figsize=(7.4, 2.0), nrows=1, ncols=4, sharey=True, sharex=True,\n",
+    "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
+    "\n",
+    "for ax in axs.flat:\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.set_xlim(0, 14)\n",
+    "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "    ax.set_xlabel(\"Age [Gyr]\")\n",
+    "    ax.set_ylim(-1.0, 0.7)\n",
+    "    ax.set_ylabel('median([Fe/H])')\n",
+    "    ax.set_axisbelow(True)\n",
+    "    ax.label_outer()\n",
+    "\n",
+    "markers = [\"o\", \"v\", \"^\", \"d\"]\n",
+    "colors = list(settings.component_colors.values())\n",
+    "labels = list(settings.component_labels.values())\n",
+    "\n",
+    "for i, ax in enumerate(axs.flat):\n",
+    "    for j in range(4):\n",
+    "        label = labels[j] if j == i else None\n",
+    "        color = colors[j] if j == i else \"silver\"\n",
+    "        zorder = 10 if j == i else 5\n",
+    "        ax.scatter(\n",
+    "            age_median[component == j],\n",
+    "            abundance_median[component == j],\n",
+    "            c=color, label=label, zorder=zorder,\n",
+    "            s=20, linewidths=0.4, edgecolors=\"white\", marker=markers[j])\n",
+    "\n",
+    "        if j == i:\n",
+    "            age_pdf = gaussian_kde(age_median[component == j])\n",
+    "            pdf_x = np.linspace(0, 14, 100)\n",
+    "            pdf_y = age_pdf(pdf_x) / np.max(age_pdf(pdf_x)) * 0.2 - 1.0\n",
+    "            ax.fill_between(\n",
+    "                x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=color,\n",
+    "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
+    "            \n",
+    "            abundance_pdf = gaussian_kde(abundance_median[component == j])\n",
+    "            pdf_y = np.linspace(-1.0, 0.7, 100)\n",
+    "            pdf_x = abundance_pdf(pdf_y) / np.max(abundance_pdf(pdf_y)) * 2\n",
+    "            ax.fill_betweenx(\n",
+    "                y=pdf_y, x1=-pdf_x + 14, x2=14, edgecolor=color,\n",
+    "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
+    "\n",
+    "    ax.legend(loc=\"upper left\", framealpha=0, fontsize=7.5)\n",
+    "\n",
+    "fig.savefig(\"../images/age_metallicity_by_region/median_scatter.pdf\")\n",
+    "plt.close(fig)"
    ]
   },
   {
