--- a/scripts/FeH Metallicity.ipynb
+++ b/scripts/FeH Metallicity.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy.stats import gaussian_kde"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,60 +207,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## median([O/H]) vs median([Fe/H]) Scatter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 251,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(1.5, 4.0))\n",
-    "gs = fig.add_gridspec(nrows=5, ncols=1, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
-    "\n",
-    "for ax in axs.flat:\n",
-    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
-    "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    ax.set_xlim(-1.0, 0.6)\n",
-    "    ax.set_ylim(-0.6, 0.8)\n",
-    "    ax.set_xticks([-0.8, -0.4, 0, 0.4])\n",
-    "    ax.set_yticks([-0.4, 0, 0.4])\n",
-    "    if ax == axs.flat[2]:\n",
-    "        ax.set_ylabel('median([O/H])')\n",
-    "    ax.set_xlabel('median([Fe/H])')\n",
-    "    ax.set_axisbelow(True)\n",
-    "\n",
-    "markers = [\"s\", \"o\", \"v\", \"^\", \"d\"]\n",
-    "colors = [\"k\"] + list(settings.component_colors.values())\n",
-    "labels = [\"All\"] + list(settings.component_labels.values())\n",
-    "for i, ax in enumerate(axs.flat):\n",
-    "    for j in range(-1, 4):\n",
-    "        label = labels[j + 1] if j + 1 == i else None\n",
-    "        color = colors[j + 1] if j + 1 == i else \"silver\"\n",
-    "        zorder = 10 if j + 1 == i else 5\n",
-    "        ax.scatter(\n",
-    "            df[\"Fe/H_Median\"][df[\"Component\"] == j],\n",
-    "            df[\"O/H_Median\"][df[\"Component\"] == j],\n",
-    "            c=color, label=label, zorder=zorder,\n",
-    "            s=10, linewidths=0.4, edgecolors=\"white\", marker=markers[j + 1])\n",
-    "    ax.legend(loc=\"upper left\", framealpha=0, fontsize=5.0)\n",
-    "\n",
-    "fig.savefig(\"../images/metallicity/OH_vs_FeH_originals_s127.pdf\")\n",
-    "plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## median([O/Fe]) vs median([Fe/H]) Scatter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,10 +223,10 @@
     "for ax in axs.flat:\n",
     "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    ax.set_xlim(-1.0, 0.6)\n",
-    "    ax.set_ylim(0.2, 0.3)\n",
+    "    ax.set_xlim(-1.0, 0.8)\n",
+    "    ax.set_ylim(0.18, 0.32)\n",
     "    ax.set_xticks([-0.8, -0.4, 0, 0.4])\n",
-    "    ax.set_yticks([0.22, 0.24, 0.26, 0.28])\n",
+    "    ax.set_yticks([0.20, 0.22, 0.24, 0.26, 0.28, 0.3])\n",
     "    if ax == axs.flat[0]:\n",
     "        ax.set_ylabel('median([O/Fe])')\n",
     "    ax.set_xlabel('median([Fe/H])')\n",
@@ -293,7 +246,28 @@
     "            df[\"O/Fe_Median\"][df[\"Component\"] == j],\n",
     "            c=color, label=label, zorder=zorder,\n",
     "            s=20, linewidths=0.4, edgecolors=\"white\", marker=markers[j])\n",
-    "    ax.legend(loc=\"lower left\", framealpha=0, fontsize=7.5)\n",
+    "        \n",
+    "        if j == i:\n",
+    "            fe_pdf = gaussian_kde(\n",
+    "                df[\"Fe/H_Median\"][df[\"Component\"] == j].to_numpy(\n",
+    "                    dtype=np.float64))\n",
+    "            pdf_x = np.linspace(-1.0, 0.6, 100)\n",
+    "            pdf_y = fe_pdf(pdf_x) / np.max(fe_pdf(pdf_x)) * 0.02 \\\n",
+    "                + ax.get_ylim()[0]\n",
+    "            ax.fill_between(\n",
+    "                x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=color,\n",
+    "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
+    "            \n",
+    "            o_pdf = gaussian_kde(\n",
+    "                df[\"O/Fe_Median\"][df[\"Component\"] == j].to_numpy(\n",
+    "                    dtype=np.float64))\n",
+    "            pdf_y = np.linspace(0.18, 0.3, 100)\n",
+    "            pdf_x = o_pdf(pdf_y) / np.max(o_pdf(pdf_y)) * 0.3\n",
+    "            ax.fill_betweenx(\n",
+    "                y=pdf_y, x1=-pdf_x + 0.8, x2=0.8, edgecolor=color,\n",
+    "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
+    "\n",
+    "    ax.legend(loc=\"upper left\", framealpha=0, fontsize=7.5)\n",
     "\n",
     "fig.savefig(\"../images/metallicity/OFe_vs_FeH_originals_s127.pdf\")\n",
     "plt.close(fig)"
