--- a/scripts/FeH Metallicity Profiles by Region.ipynb
+++ b/scripts/FeH Metallicity Profiles by Region.ipynb
@@ -5,12 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stellar Metallicity Profiles"
+    "# [Fe/H] Metallicity Profiles by Region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RXY_RANGE: tuple = (0, 30)\n",
+    "N_BINS: int = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,29 +102,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_data(simulation: int):\n",
     "    df = read_data(simulation=simulation, of=\"Fe\", to='H')\n",
-    "    median_by_region = []\n",
+    "    mean_by_region = []\n",
     "    for tag in settings.component_tags.values():\n",
     "        is_region = (df[\"RegTag\"] == tag)\n",
-    "        median, bin_edges, _ = binned_statistic(\n",
+    "        mean, bin_edges, _ = binned_statistic(\n",
     "            x=df[\"r_xy\"][is_region & np.isfinite(df[\"[Fe/H]\"])],\n",
     "            values=df[\"[Fe/H]\"][is_region & np.isfinite(df[\"[Fe/H]\"])],\n",
-    "            statistic=\"median\",\n",
-    "            bins=n_bins,\n",
-    "            range=x_range)\n",
-    "        median_by_region.append(median)\n",
+    "            statistic=\"mean\",\n",
+    "            bins=N_BINS,\n",
+    "            range=RXY_RANGE)\n",
+    "        mean_by_region.append(mean)\n",
     "    bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
-    "    return bin_centers, median_by_region"
+    "    return bin_centers, mean_by_region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,32 +141,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_bins = 199\n",
-    "x_range = (1, 200)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Original Run"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### [Fe/H] Profiles for Sample"
+    "## [Fe/H] Profiles for Sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,13 +176,15 @@
     "gs = fig.add_gridspec(nrows=6, ncols=5, hspace=0.0, wspace=0.0)\n",
     "axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
-    "set_axs_configuration(\n",
-    "    xlim=(1, 200), ylim=(-1.5, 1.5),\n",
-    "    xticks=[1, 10, 100], yticks=[-1, -0.5, 0, 0.5, 1],\n",
-    "    xlabel=r\"$r_{xy}$ [ckpc]\",\n",
-    "    ylabel=r\"$\\mathrm{median} \\left( \\mathrm{[Fe/H]} \\right)$\",\n",
-    "    axs=axs, n_used=len(sample),\n",
-    "    xscale=\"log\", xticklabels=[1, 10, 100])\n",
+    "for ax in axs.flatten():\n",
+    "    ax.set_xlim(RXY_RANGE)\n",
+    "    ax.set_ylim(-1.5, 1.5),\n",
+    "    ax.set_xticks([0, 5, 10, 15, 20, 25])\n",
+    "    ax.set_yticks([-1, -0.5, 0, 0.5, 1])\n",
+    "    ax.set_xlabel(r\"$r_{xy}$ [ckpc]\")\n",
+    "    ax.set_ylabel(r\"$\\left< \\mathrm{[Fe/H]} \\right>$\")\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "    ax.label_outer()\n",
     "\n",
     "for idx, ax in enumerate(axs.flat):\n",
     "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
@@ -203,18 +198,14 @@
     "                c=settings.component_colors[settings.components[tag]],\n",
     "                label=settings.component_labels[settings.components[tag]])\n",
     "        ax.text(x=0.95, y=0.95, size=6.0,\n",
-    "                s=r\"$\\texttt{\" + f\"au{galaxy}_or_l4\".upper() + \"}$\",\n",
+    "                s=r\"$\\texttt{\" + f\"au{galaxy}_or_l4_s127\".upper() + \"}$\",\n",
     "                ha=\"right\", va=\"top\", transform=ax.transAxes)\n",
     "    else:\n",
     "        ax.axis(\"off\")\n",
     "\n",
     "axs[0, 0].legend(loc=\"upper left\", framealpha=0.0, fontsize=4.0)\n",
     "\n",
-    "for ax in axs.flatten():\n",
-    "    ax.xaxis.label.set_size(8.0)\n",
-    "    ax.yaxis.label.set_size(8.0)\n",
-    "\n",
-    "fig.savefig(f\"../images/metallicity_profiles/originals.pdf\")\n",
+    "fig.savefig(\"../images/FeH_metallicity_profiles_by_region/originals.pdf\")\n",
     "plt.close(fig)"
    ]
   },
@@ -222,12 +213,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Average [Fe/H] Profile"
+    "## Average [Fe/H] Profiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,96 +241,27 @@
     "\n",
     "for ax in axs.flat:\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    ax.set_xlim(x_range)\n",
-    "    ax.set_xscale(\"log\")\n",
+    "    ax.set_xlim(RXY_RANGE)\n",
     "    ax.set_ylim(-1.5, 0.5)\n",
-    "    ax.set_xticks([1, 10, 100])\n",
-    "    ax.set_xticklabels([1, 10, 100])\n",
+    "    ax.set_xticks([0, 5, 10, 15, 20, 25])\n",
     "    ax.set_ylabel(r\"$\\left< \\mathrm{[Fe/H]} \\right>$\")\n",
     "    ax.set_xlabel(r\"$r_{xy}$ [ckpc]\")\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
     "    ax.label_outer()\n",
     "\n",
     "for idx, component in enumerate(settings.components):\n",
     "    for galaxy in settings.galaxies:\n",
     "        axs[idx].plot(df[\"BinCenters_kpc\"],\n",
     "                      df[f\"FeHProfile_Au{galaxy}_{component}\"],\n",
-    "                      lw=1.0, color=\"gainsboro\")\n",
-    "    axs[idx].plot(df[\"BinCenters_kpc\"], averages[idx],\n",
-    "                  lw=1.5, color=settings.component_colors[component])\n",
+    "                      lw=1.0, color=\"silver\", zorder=10)\n",
+    "    axs[idx].plot(df[\"BinCenters_kpc\"], averages[idx],lw=1.5,\n",
+    "                  color=settings.component_colors[component], zorder=11)\n",
     "    axs[idx].text(x=0.05, y=0.05, size=8.0, ha='left', va='bottom',\n",
     "                  s=settings.component_labels[settings.components[idx]],\n",
     "                  transform=axs[idx].transAxes)\n",
     "\n",
-    "fig.savefig(f\"../images/metallicity_profiles/originals_average.pdf\")\n",
-    "plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reruns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### [Fe/H] Profiles for Sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample = [f\"au{i}_re_l4_s251\" for i in settings.reruns]\n",
-    "df = get_data_for_sample(simulations=sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(7.2, 7.2))\n",
-    "gs = fig.add_gridspec(nrows=6, ncols=5, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
-    "\n",
-    "set_axs_configuration(\n",
-    "    xlim=(1, 200), ylim=(-1.5, 1.5),\n",
-    "    xticks=[1, 10, 100], yticks=[-1, -0.5, 0, 0.5, 1],\n",
-    "    xlabel=r\"$r_{xy}$ [ckpc]\",\n",
-    "    ylabel=r\"$\\mathrm{median} \\left( \\mathrm{[Fe/H]} \\right)$\",\n",
-    "    axs=axs, n_used=len(sample),\n",
-    "    xscale=\"log\", xticklabels=[1, 10, 100])\n",
-    "\n",
-    "for idx, ax in enumerate(axs.flat):\n",
-    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
-    "    if idx < len(sample):\n",
-    "        galaxy, _, _, _ = parse(sample[idx])\n",
-    "        for tag in settings.component_tags.values():\n",
-    "            ax.plot(\n",
-    "                df[\"BinCenters_kpc\"],\n",
-    "                df[f\"FeHProfile_Au{galaxy}_{settings.components[tag]}\"],\n",
-    "                lw=1.0, zorder=10,\n",
-    "                c=settings.component_colors[settings.components[tag]],\n",
-    "                label=settings.component_labels[settings.components[tag]])\n",
-    "        ax.text(x=0.95, y=0.95, size=6.0,\n",
-    "                s=r\"$\\texttt{\" + f\"au{galaxy}_or_l4\".upper() + \"}$\",\n",
-    "                ha=\"right\", va=\"top\", transform=ax.transAxes)\n",
-    "    else:\n",
-    "        ax.axis(\"off\")\n",
-    "\n",
-    "axs[0, 0].legend(loc=\"upper left\", framealpha=0.0, fontsize=4.0)\n",
-    "\n",
-    "for ax in axs.flatten():\n",
-    "    ax.xaxis.label.set_size(8.0)\n",
-    "    ax.yaxis.label.set_size(8.0)\n",
-    "\n",
-    "fig.savefig(f\"../images/metallicity_profiles/reruns.pdf\")\n",
+    "fig.savefig(\n",
+    "    \"../images/FeH_metallicity_profiles_by_region/originals_average.pdf\")\n",
     "plt.close(fig)"
    ]
   }
