Update ylim in figure.

--- a/scripts/FeH Metallicity Profiles by Region.ipynb
+++ b/scripts/FeH Metallicity Profiles by Region.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,9 +178,9 @@
     "\n",
     "for ax in axs.flatten():\n",
     "    ax.set_xlim(RXY_RANGE)\n",
-    "    ax.set_ylim(-1.5, 1.5),\n",
+    "    ax.set_ylim(-1.5, 0.5),\n",
     "    ax.set_xticks([0, 5, 10, 15, 20, 25])\n",
-    "    ax.set_yticks([-1, -0.5, 0, 0.5, 1])\n",
+    "    ax.set_yticks([-1, -0.5, 0])\n",
     "    ax.set_xlabel(r\"$r_{xy}$ [ckpc]\")\n",
     "    ax.set_ylabel(r\"$\\left< \\mathrm{[Fe/H]} \\right>$\")\n",
     "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
@@ -203,7 +203,7 @@
     "    else:\n",
     "        ax.axis(\"off\")\n",
     "\n",
-    "axs[0, 0].legend(loc=\"upper left\", framealpha=0.0, fontsize=4.0)\n",
+    "axs[0, 0].legend(loc=\"lower left\", framealpha=0.0, fontsize=4.0)\n",
     "\n",
     "fig.savefig(\"../images/FeH_metallicity_profiles_by_region/originals.pdf\")\n",
     "plt.close(fig)"
