--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:51: RuntimeWarning: Mean of empty slice\n"
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:55: RuntimeWarning: Mean of empty slice\n"
      ]
     }
    ],
@@ -418,9 +418,13 @@
     "axs[3, 0].set_ylabel(r'$\\sigma_v$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
     "\n",
     "for simulation in originals:\n",
-    "    c, label, zorder = \"silver\", None, 10\n",
+    "    c, label, zorder, lw = \"silver\", None, 10, 0.75\n",
     "    if simulation == \"au11_or_l4_s127\":\n",
     "        c, label, zorder = \"tab:purple\", r\"$\\texttt{AU11_OR_L4_S127}$\", 11\n",
+    "        lw = 1.25\n",
+    "    elif simulation == \"au6_or_l4_s127\":\n",
+    "        c, label, zorder = \"tab:green\", r\"$\\texttt{AU6_OR_L4_S127}$\", 12\n",
+    "        lw = 1.25\n",
     "    for component, idx in settings.component_tags.items():\n",
     "        for i, feature in enumerate(features):\n",
     "            is_finite = np.isfinite(\n",
@@ -433,7 +437,7 @@
     "                data[\"BinCenters_ckpc\"][is_finite & has_particles],\n",
     "                data[f\"{simulation.upper()}_{feature}_{component}_km/s\"][\n",
     "                    is_finite & has_particles],\n",
-    "                lw=0.75, zorder=zorder, c=c, label=label)\n",
+    "                lw=lw, zorder=zorder, c=c, label=label)\n",
     "\n",
     "for component, j in settings.component_tags.items():\n",
     "    axs[0, j].text(\n",
