--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
@@ -462,13 +472,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "  0%|          | 0/30 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30/30 [55:04<00:00, 131.88s/it]\n"
+     ]
     }
    ],
    "source": [
@@ -491,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +523,7 @@
     "    ax.tick_params(which='both', direction=\"in\")\n",
     "    ax.set_xlim(0, 14)\n",
     "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
-    "    ax.set_xlabel(\"Age [Gyr]\")\n",
+    "    ax.set_xlabel(\"median(Age) [Gyr]\")\n",
     "    ax.set_ylim(-1.0, 0.7)\n",
     "    ax.set_ylabel('median([Fe/H])')\n",
     "    ax.set_axisbelow(True)\n",
