Print metallicity gradients.

--- a/scripts/FeH Metallicity Profiles.ipynb
+++ b/scripts/FeH Metallicity Profiles.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
@@ -28,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -290,9 +300,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AU1_OR_L4_S127-0.012162173589842923 +\\- 0.001586192029240307\n",
+      "AU2_OR_L4_S1270.002902571303502659 +\\- 0.0012028904401085645\n",
+      "AU3_OR_L4_S127-0.001055428951785713 +\\- 0.0013238855570980176\n",
+      "AU4_OR_L4_S127-0.02289730090793814 +\\- 0.0007370280407369616\n",
+      "AU5_OR_L4_S127-0.013559567981471546 +\\- 0.000587932185303615\n",
+      "AU6_OR_L4_S127-0.007863143974621989 +\\- 0.00107647992320543\n",
+      "AU7_OR_L4_S127-0.013192452898460546 +\\- 0.0009325485608829263\n",
+      "AU8_OR_L4_S127-0.004585246415603603 +\\- 0.0007717070677582534\n",
+      "AU9_OR_L4_S127-0.014841822426462148 +\\- 0.0016217938295359487\n",
+      "AU10_OR_L4_S127-0.03458962682915744 +\\- 0.0021488191749006198\n",
+      "AU11_OR_L4_S127-0.017366282514960873 +\\- 0.002512882322579526\n",
+      "AU12_OR_L4_S127-0.024273355209390255 +\\- 0.0023958510410871186\n",
+      "AU13_OR_L4_S127-0.02087991199202147 +\\- 0.0019912859462135613\n",
+      "AU14_OR_L4_S127-0.0201055594775695 +\\- 0.001316483671359473\n",
+      "AU15_OR_L4_S127-0.015809731818280364 +\\- 0.0009182311280935017\n",
+      "AU16_OR_L4_S127-0.0022717028963999274 +\\- 0.0013972561024559913\n",
+      "AU17_OR_L4_S127-0.011006161492463178 +\\- 0.002451351881229908\n",
+      "AU18_OR_L4_S127-0.00811286710807661 +\\- 0.0015660286605479693\n",
+      "AU19_OR_L4_S127-0.009666403758694198 +\\- 0.0008757850977009615\n",
+      "AU20_OR_L4_S127-0.006082990280761361 +\\- 0.00039820348181510937\n",
+      "AU21_OR_L4_S127-0.007513244950483269 +\\- 0.0006920545933579455\n",
+      "AU22_OR_L4_S127-0.044325525081921884 +\\- 0.0017118318517688675\n",
+      "AU23_OR_L4_S127-0.012315812427925512 +\\- 0.0023956249252375145\n",
+      "AU24_OR_L4_S1270.00057595796387406 +\\- 0.0007884355676667572\n",
+      "AU25_OR_L4_S127-0.010614647864032963 +\\- 0.0014441947321209366\n",
+      "AU26_OR_L4_S127-0.02187876031817316 +\\- 0.0014775903086160387\n",
+      "AU27_OR_L4_S127-0.014022935705795186 +\\- 0.0008731011217551802\n",
+      "AU28_OR_L4_S127-0.03420541259815108 +\\- 0.0019823717468755385\n",
+      "AU29_OR_L4_S127-0.01571733087062937 +\\- 0.0006062398228433657\n",
+      "AU30_OR_L4_S127-0.021389681145708845 +\\- 0.0015512512099715853\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit sample in the range\n",
     "range_fits = []\n",
@@ -302,7 +349,10 @@
     "    x_range = x[(x > fit_range[0]) & (x < fit_range[1])]\n",
     "    y_range = y[(x > fit_range[0]) & (x < fit_range[1])]\n",
     "    regress = linregress(x=x_range, y=y_range)\n",
-    "    range_fits.append(regress)"
+    "    range_fits.append(regress)\n",
+    "\n",
+    "    print(f\"{galaxy.upper()}\", end=\"\")\n",
+    "    print(f\"{regress.slope} +\\- {regress.stderr}\")"
    ]
   },
   {
